{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "TowerDefence",
            "id": "c24a0007-dfac-4101-b3b4-1066d01f5d5a",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "55478120-d2f7-4323-bdf6-4bdbfffa4a61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "f0a42c2f-17ec-4059-bf08-f2ec469f6abb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf3e2efe-7587-4a02-a1b4-37c1f9dfa64f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23c6f9e1-efc3-47ae-a82a-61c2c46e462e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}